refactor(runtime): unify strict IN argument decoding